[gd_scene load_steps=4 format=3 uid="uid://enkvc6h4fkqg"]

[ext_resource type="PackedScene" uid="uid://0p7qvgg7lupa" path="res://characters/Bigslime/Bigslime.tscn" id="1_h6s7j"]
[ext_resource type="Script" path="res://big_mob.gd" id="1_xuex7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8tavr"]
radius = 70.0286

[node name="BigMob" type="CharacterBody2D" groups=["mobs"]]
collision_layer = 2
collision_mask = 3
platform_floor_layers = 4294967040
script = ExtResource("1_xuex7")

[node name="BigSlime" parent="." instance=ExtResource("1_h6s7j")]
unique_name_in_owner = true
position = Vector2(-1, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -36)
shape = SubResource("CircleShape2D_8tavr")

[connection signal="mob_muere" from="." to="." method="_on_mob_muere"]
